# ELEC5670_Project

./: ELEC5670_Final_Project.md  README.md
cfg/: demo.rviz
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/laser_mapping/: key_motion
devel/lib/motion_plan/: key_motion
devel/lib/pkgconfig/: laser_mapping.pc  motion_plan.pc
devel/share/laser_mapping/cmake/: laser_mappingConfig.cmake
devel/share/motion_plan/cmake/: motion_planConfig.cmake
robot_project/launch/: final_project.launch
robot_project/rviz_cfg/: demo.rviz
robot_project/src/image_localization/: package.xml
robot_project/src/image_localization/launch/: image_localization.launch
robot_project/src/image_localization/scripts/: image_localize_node.py
robot_project/src/laser_mapping/launch/: laser_mapping.launch
robot_project/src/laser_mapping/src/: key_motion_node.cpp
robot_project/src/visual_servoing/: package.xml
robot_project/src/visual_servoing/launch/: visual_servoing.launch
robot_project/src/visual_servoing/scripts/: visual_servoing_node.py
src/image_localization/: CMakeLists.txt
src/image_localization/scripts/: image_localize_node.py
src/image_location/: image_loacte.py
src/laser_mapping/: CMakeLists.txt  package.xml
src/laser_mapping/launch/: laser_mapping.launch
src/laser_mapping/src/: key_motion_node.cpp
src/visual_servoing/: CMakeLists.txt
src/visual_servoing/scripts/: ball_follow_node.py
